change in many ui components, add ques for Mirror download, change in logging, change in SystemdInfo, and many more